# ToyRenderer

./: .gitignore  CMakeLists.txt
Example/: CMakeLists.txt  main.cpp  toyglwidget.cpp  toyglwidget.h  toymainwindow.cpp  toymainwindow.h
Include/: toygeometry.h  toyrenderengine.h  toyrenderhelper.h
Src/: CMakeLists.txt  ToyRenderer.pro  main.cpp  toygeometry.cpp  toyglwidget.cpp  toyglwidget.h  toyrenderengine.cpp  toyrenderengine.h  toyrenderhelper.cpp
UnitTests/: CMakeLists.txt  testtoyrenderengine.cpp  testtoyrenderhelper.cpp
src/: mainwindow.ui  toyglwidget.cpp  toymainwindow.cpp
